--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -147,7 +147,7 @@
         <td><%= event.teacher_hours %></td>
         <td>
           <% event.users.each do |user| %>
-            <%= link_to user, user %>
+            <%= link_to user, user %><br>
           <% end %>
         </td>
       </tr>
