--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -13,6 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Tableau de bord', root_path %></li>
         <li><%= link_to 'Promotions', promotions_path %></li>
+        <li><%= link_to 'Années', years_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pédagogie <span class="caret"></span></a>
           <ul class="dropdown-menu">
