--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Year</th>
+      <th>Promotion</th>
     </tr>
   </thead>
   <tbody>
@@ -13,4 +13,4 @@
   </tbody>
 </table>
 
-<%= link_to 'New Promotion', new_promotion_path, class: 'btn btn-primary btn-xs' if can? :create, Promotion %>
+<%= link_to 'Nouvelle promotion', new_promotion_path, class: 'btn btn-primary btn-xs' if can? :create, Promotion %>
