--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -17,20 +17,15 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pédagogie <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><%= link_to 'Equipe', users_path %></li>
             <li><%= link_to 'Champs', fields_path %></li>
             <li><%= link_to 'Projets', projects_path %></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Equipe <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Archives <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Intervenants', users_path %></li>
             <li><%= link_to 'Services', users_summary_path %></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Budget <span class="caret"></span></a>
-          <ul class="dropdown-menu">
             <li><%= link_to 'Intervenants', budgets_users_path %></li>
             <li><%= link_to 'Modules', budgets_teaching_modules_path %></li>
           </ul>
