--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,12 +1,20 @@
 <%= semantic_form_for @project do |f| %>
   <%= f.inputs do %>
-    <%= f.input :label %>
-    <%= f.input :position %>
-    <%= f.input :description %>
-    <%= f.input :user, label: 'Responsable' %>
-    <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
-    <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
-    <%= f.input :users, as: :check_boxes, label: 'Personnes impliquées'  %>
-  <% end %>
-  <%= f.actions %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.input :label %>
+      <%= f.input :year, include_blank: false %>
+      <%= f.input :user, label: 'Responsable' %>
+      <%= f.input :description %>
+    </div>
+    <div class="col-md-4">
+      <%= f.input :position %>
+      <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
+      <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
+    </div>
+    <div class="col-md-4">
+      <%= f.input :users, as: :check_boxes, label: 'Personnes impliquées'  %>
+    </div>
+    <% end %>
+  <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
 <% end %>
