--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -2,6 +2,32 @@ La promotion <%= link_to @year.first_year_promotion, @year.first_year_promotion 
 La promotion <%= link_to @year.second_year_promotion, @year.second_year_promotion %> est en seconde année.<br>
 Pour actualiser l'EDT, cliquez sur la promotion concernée.
 
+<h2>Projets</h2>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th style="min-width: 200px">Nom</th>
+      <th>Description</th>
+      <th>Responsable</th>
+      <th>Personnes impliquées</th>
+      <th>Champs</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @year.projects.each do |project| %>
+      <tr>
+        <td><%= link_to project, project %></td>
+        <td><%= project.description %></td>
+        <td><%= project.user %></td>
+        <td><%= project.users.map { |user| user.to_s }.join(', ') %></td>
+        <td><%= project.fields.map { |field| field.to_s }.join(', ') %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
 <h2>Services</h2>
 
 <table class="table table-hover">
@@ -17,6 +43,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
   </thead>
   <tbody>
     <% @year.users.each do |user| %>
+      <% next if user.nil? %>
       <%
       service = user.hours
       planned = @year.planned_teacher_hours_for(user)
