--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -8,7 +8,7 @@
       <%= f.input :description %>
     </div>
     <div class="col-md-4">
-      <%= f.input :position %>
+      <%= f.input :position, label: 'Atelier' %>
       <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
       <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
     </div>
