--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -7,7 +7,8 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 <table class="table table-hover">
   <thead>
     <tr>
-      <th style="min-width: 200px">Nom</th>
+      <th>Atelier</th>
+      <th>Nom</th>
       <th>Description</th>
       <th>Responsable</th>
       <th>Personnes impliquées</th>
@@ -17,6 +18,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
   <tbody>
     <% @year.projects.each do |project| %>
       <tr>
+        <td><%= project.position %></td>
         <td><%= link_to project, project %></td>
         <td><%= project.description %></td>
         <td><%= project.user %></td>
