--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -8,7 +8,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
   <thead>
     <tr>
       <th>Atelier</th>
-      <th>Nom</th>
+      <th style="min-width: 200px">Nom</th>
       <th>Description</th>
       <th>Responsable</th>
       <th>Personnes impliquées</th>
