--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -8,6 +8,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 <table class="table table-hover">
   <thead>
     <tr>
+      <th>Semestre</th>
       <th>Atelier</th>
       <th style="min-width: 200px">Nom</th>
       <th>Description</th>
@@ -19,6 +20,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
   <tbody>
     <% @year.projects.each do |project| %>
       <tr>
+        <td><%= project.semesters.join(', ') %></td>
         <td><%= project.position %></td>
         <td><%= link_to project, project %></td>
         <td><%= simple_format project.description %></td>
