--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4">
       <%= f.input :label %>
-      <%= f.input :year, include_blank: false %>
+      <%= f.input :year, include_blank: false, collection: Year.order(year: :desc) %>
       <%= f.input :user, label: 'Responsable' %>
       <%= f.input :description %>
     </div>
