--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Project</h1>
-<%= link_to 'Show', @project %>
 <%= render 'form' %>
 <br/>
-<%= link_to 'Supprimer ce projet', project_path(@project), method: :delete, data: {confirm: "Sûr?"}  %>
+<%= link_to 'Supprimer ce projet', project_path(@project), class: 'btn btn-danger', method: :delete, data: {confirm: "Sûr?"}  %>
 <br/>
