--- a/app/views/application/_jumbotron.html.erb
+++ b/app/views/application/_jumbotron.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron <%= controller_name %>">
   <div>
     <h1><%= raw @title %></h1>
-    <% if @subtitle.present? %><p><%= raw @subtitle %></p><% end %>
+    <% if @subtitle.present? %><p><%= simple_format @subtitle %></p><% end %>
   </div>
 </div>
