--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,23 +1,38 @@
-<%= link_to 'Modifier', edit_project_path(@project) if can? :edit, @project %>
+<%= link_to 'Modifier', edit_project_path(@project), class: 'btn btn-default' if can? :edit, @project %>
 <div class="row">
   <div class="col-md-4">
-    <h2>Description</h2>
-    <%= simple_format @project.description %>
-    <h2>Semestres</h2>
+    <h4>Année</h4>
+    <%= link_to @project.year, @project.year %>
+    <h4>Semestres</h4>
     <%= render partial: 'semesters/inline_list', locals: {semesters: @project.semesters} %>
-  </div>
-  <div class="col-md-4">
-    <h2>Champs concernés</h2>
+    <h4>Champs concernés</h4>
     <%= render partial: 'fields/inline_list', locals: {fields: @project.fields} %>
-    <h2>Modules concernés</h2>
+    <h4>Modules concernés</h4>
     <p>Nous pouvons intégrer des notes de ce projet dans les modules suivants</p>
     <%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: @project.teaching_modules} %>
-  </div>
-  <div class="col-md-4">
-    <h2>Responsable</h2>
+    <h4>Responsable</h4>
     <p><%= link_to @project.user, @project.user unless @project.user.nil? %></p>
-    <h2>Personnes impliquées</h2>
+    <h4>Personnes impliquées</h4>
     <%= render partial: 'users/inline_list', locals: {users: @project.users} %>
+  </div>
+  <div class="col-md-8">
+    <h2>Objectifs visés par ce projet</h2>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Module</th>
+          <th>Objectif</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @project.objectives.each do |objective| %>
+          <tr>
+            <td><%= objective.teaching_module %></td>
+            <td><%= objective %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
 <h2>Heures planifiées</h2>
