--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,11 +1,10 @@
 @import bootstrap-sprockets
 @import bootstrap
 @import font-awesome
-@import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,700')
 @import devise_bootstrap_views
 
 *
-  font-family: 'Mukta', sans-serif
+  font-family: sans-serif
   font-weight: 300
   text-rendering: optimizeLegibility
 
