--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -6,7 +6,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 <h2>Projets</h2>
 
 <% Semester.all.each do |semester| %>
-  <h3><%= semester %></h3>
+  <h3><%= link_to semester, year_semester_path(year_id: @year.id, id: semester) %></h3>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -14,19 +14,15 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
         <th style="min-width: 200px">Nom</th>
         <th>Description</th>
         <th>Responsable</th>
-        <th>Personnes impliquées</th>
-        <th>Champs</th>
       </tr>
     </thead>
     <tbody>
-      <% @year.projects.joins(:semesters).where(semesters: { id: semester }).each do |project| %>
+      <% @year.projects.in_semester(semester).each do |project| %>
         <tr>
           <td><%= project.position %></td>
           <td><%= link_to project, project %></td>
           <td><%= simple_format project.description %></td>
           <td><%= project.user %></td>
-          <td><%= project.users.map { |user| user.to_s }.join(', ') %></td>
-          <td><%= project.fields.map { |field| field.to_s }.join(', ') %></td>
         </tr>
       <% end %>
     </tbody>
