--- a/app/views/semesters/show_in_year.html.erb
+++ b/app/views/semesters/show_in_year.html.erb
@@ -49,7 +49,7 @@
     <tr>
       <th width="400">Module</th>
       <th>Objectif</th>
-      <th width="200">Projets</th>
+      <th width="200">Projets visant cet objectif</th>
     </tr>
   </thead>
   <tbody>
