--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -7,7 +7,7 @@
     </button>
     <%= link_to root_path, class:'navbar-brand logo' do %>
       <%= image_tag 'mmi-bordeaux.png' %>
-      <p>Admin</p>
+      <p>Teach</p>
     <% end %>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav navbar-right">
