--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -13,7 +13,7 @@
   <body class="devise">
     <div class="logo logo-black">
       <%= image_tag 'mmi-bordeaux.png' %>
-      <p>Admin</p>
+      <p>Teach</p>
     </div>
     <div class="container">
       <div class="row">
