--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -75,21 +75,13 @@ hr.spacer
   padding-bottom: 10px
   padding-left: 0
 
-.projects-timeline
-  margin-top: 50px
-  table
+.timeline
+  td.active span
+    display: block
     width: 100%
-    th
-      text-align: center
-    td
-      width: 20%
-      border-spacing: 10px
-      &.active span
-        display: block
-        width: 100%
-        height: 30px
-        margin-bottom: 5px
-        background: black
+    min-width: 50px
+    min-height: 20px
+    background: #337ab7
 
 .jumbotron
   color: white
