timeline for promotion and year

--- a/app/views/application/_td_percent.html.erb
+++ b/app/views/application/_td_percent.html.erb
@@ -5,7 +5,7 @@
   elsif percent < 0
     color_class = 'btn-warning'
   elsif percent < 30
-    color_class = 'btn-success'
+    color_class = ''
   else 
     color_class = 'btn-info'
   end
