--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -9,7 +9,7 @@
         <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
       </div>
       <div class="col-md-4">
-        <%= f.input :position, label: 'Atelier' %>
+        <%= f.input :position, label: 'N° de semaine' %>
         <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
         <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
       </div>
