--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -5,13 +5,21 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 
 <h2>Projets</h2>
 
+<div id='timeline' style="width: 100%; height: 600px"></div>
+<script type="text/javascript">
+  var data = <%= { events: @year.projects.collect(&:to_event) }.to_json.html_safe %>;
+  var config = { language: 'fr' };
+  new TL.Timeline('timeline', data, config);
+</script>
+
+
 <% Semester.all.each do |semester| %>
   <h3><%= link_to semester, year_semester_path(year_id: @year.id, id: semester) %></h3>
   <table class="table table-hover">
     <thead>
       <tr>
-        <th>Atelier</th>
         <th style="min-width: 200px">Nom</th>
+        <th>N° de semaine</th>
         <th>Description</th>
         <th>Responsable</th>
       </tr>
@@ -19,8 +27,8 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
     <tbody>
       <% @year.projects.in_semester(semester).each do |project| %>
         <tr>
-          <td><%= project.position %></td>
           <td><%= link_to project, project %></td>
+          <td><%= project.position %></td>
           <td><%= simple_format project.description %></td>
           <td><%= project.user %></td>
         </tr>
