--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,7 +2,7 @@
 @import bootstrap
 @import font-awesome
 @import devise_bootstrap_views
-@import 'timeline/timeline.css'
+@import timeline/timeline
 
 *
   font-family: sans-serif
