--- a/app/views/teaching_modules/show.html.erb
+++ b/app/views/teaching_modules/show.html.erb
@@ -146,6 +146,6 @@
   </div>
   <div class="col-md-6">
     <h2>Projets possibles</h2>
-    <%= render partial: 'projects/inline_list', locals: {projects: @teaching_module.projects} %>
+    <%#= render partial: 'projects/inline_list', locals: {projects: @teaching_module.projects} %>
   </div>
 </div>
