--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render 'application/nav' %>
     <%= render 'application/jumbotron' %>
-    <div class="container">
+    <div class="container-fluid">
       <%= render 'application/breadcrumb' %>
       <%= bootstrap_flash %>
       <%= yield %>
