--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -83,6 +83,10 @@ hr.spacer
     min-width: 50px
     min-height: 20px
     background: #337ab7
+    color: white
+    text-align: center
+    font-size: 10px
+    padding: 4px
 
 .jumbotron
   color: white
